# xz

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Tip.txt  vcpkg.json  一些记录.txt
src/: application.cpp  application.h  main.cpp  ota.cpp  ota.h  queue.h
